# DST_week08

./: .gitignore  README.md  pycaretflow.py  pyproject.toml
pycaret_mcp_server/: README.md  __init__.py  server.py
pycaret_mcp_server/core/: classification.py  config.py  data_loader.py  regression.py
