[project]
name = "dst-week08"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipykernel",
    "joblib<1.5",
    "jupyter",
    "matplotlib",
    "mlflow>=3.8.1",
    "numpy",
    "pandas<2.2.0",
    "pycaret>=3.1.0",
    "scikit-learn<1.5",
    "seaborn",
]
